tests-macros/tests/value/fail_struct_transparent_more_than_one_field.stderr
error: `qi(transparent)` requires struct to have at most one field
 --> tests/value/fail_struct_transparent_more_than_one_field.rs:3:8
  |
3 | struct S {
  |        ^
