tests-macros/tests/value/fail_struct_transparent_more_than_one_field.rs
#[derive(qi_macros::Reflect, qi_macros::ToValue, qi_macros::IntoValue, qi_macros::FromValue)]
#[qi(value(crate = "qi_value", transparent))]
struct S {
    a: i32,
    b: i32,
}

fn main() {}
